kubernets_avancado/k8s/podcounter.yaml
apiVersion: v1
kind: Pod
metadata:
  name: counter
spec:
  containers:
    - name: count
      image: busybox
      args:
        - /bin/sh
        - -c
        - |
          i=0; 
          while true; do 
            echo "$i: $(date)";
            i=$((i + 1));
            sleep 1; 
          done
